# xde-theme-radar

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README.md.in  RELEASE.md  THANKS  configure.ac  configure.template  index.md
theme/: theme.ini  themerc
theme/adwm/: themerc
theme/wmaker/: style
